; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbevf/extr_ixgbevf_main.c_ixgbevf_release_rx_desc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbevf/extr_ixgbevf_main.c_ixgbevf_release_rx_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbe_hw = type { i32 }
%struct.ixgbevf_ring = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ixgbe_hw*, %struct.ixgbevf_ring*, i32)* @ixgbevf_release_rx_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ixgbevf_release_rx_desc(%struct.ixgbe_hw* %0, %struct.ixgbevf_ring* %1, i32 %2) #0 {
  %4 = alloca %struct.ixgbe_hw*, align 8
  %5 = alloca %struct.ixgbevf_ring*, align 8
  %6 = alloca i32, align 4
  store %struct.ixgbe_hw* %0, %struct.ixgbe_hw** %4, align 8
  store %struct.ixgbevf_ring* %1, %struct.ixgbevf_ring** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = call i32 (...) @wmb()
  %8 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %4, align 8
  %9 = load %struct.ixgbevf_ring*, %struct.ixgbevf_ring** %5, align 8
  %10 = getelementptr inbounds %struct.ixgbevf_ring, %struct.ixgbevf_ring* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @IXGBE_VFRDT(i32 %11)
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @IXGBE_WRITE_REG(%struct.ixgbe_hw* %8, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @IXGBE_WRITE_REG(%struct.ixgbe_hw*, i32, i32) #1

declare dso_local i32 @IXGBE_VFRDT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
